--- a/demo-admin/admin-client/src/main/resources/application.yml
+++ b/demo-admin/admin-client/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8081
   servlet:
     context-path: /demo
 spring:
@@ -10,7 +10,7 @@ spring:
     admin:
       client:
         # Spring Boot Admin 服务端地址
-        url: "http://localhost:8000/"
+        url: "http://zhaokemin-pc:8088/"
         instance:
           metadata:
             # 客户端端点信息的安全认证信息
@@ -30,3 +30,6 @@ management:
       exposure:
         # 设置端点暴露的哪些内容，默认["health","info"]，设置"*"代表暴露所有可访问的端点
         include: "*"
+logging:
+  file:
+    name: 'logs/logfile.txt'
